# RAG

./: .dockerigonore  .env.example  .gitignore  compose.dev.yaml  compose.yaml  dockerfile  nginx.conf  pyproject.toml
alloy/: config.alloy
base_rag/: .env.example
base_rag/app/: apis.py  config.py  llmtests.py  logger.py  main.py  rag_data.py  rag_query.py
base_rag/app/auth/: apis.py  apischemas.py  authfuncs.py  config.py  dbengine.py  dbfuncs.py  dbmodels.py
base_rag/app/rag/: apis.py  apischemas.py  config.py  funcs.py  parser.py  rag_data.py  rag_query.py
base_rag/app/rag/loaders/: docs_loader.py  web_loader_rag.py
naive_rag/app/: config.py  query_rag.py  rag_data.py
